--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <li><a href="recipes/bagel.html">Pizza Bagels</a></li>
         <li><a href="recipes/burger.html">Thousand Island Burger</a></li>
         <li><a href="recipes/quesadilla.html">Steak Quesadilla</a></li>
+        <li><a href="recipes/shrimp.html">Shrimp Scampi Spaghetti</a></li>
+        <li><a href="recipes/pork.html">Breaded Pork Chops</a></li>
     </ul>
     <h3>Easy mains/sides</h3>
     <ul>
