use wsl now, update artichoke and cajun pasta recipes

--- a/recipes/cajunpasta.html
+++ b/recipes/cajunpasta.html
@@ -30,7 +30,9 @@
         <li>Preheat the oven to 450. Soak the chicken thighs in warm salt water for 15 minutes.</li>
         <li>Pat the chicken dry with paper towel, place on a baking tray with parchment paper and sprinkle both sides of chicken with cajun seasoning.</li>
         <li>Cook chicken in the oven until the meat thermometer reads 165 degrees. Take the chicken out and let it cool</li>
-        <li>Cook the pasta according to the instructions in a large pot.</li>
+        <li>In a large pot add the chicken broth, green bell peppers, yellow onion, garlic, and tomatoes.</li>
+        <li>Let it come to a boil and stir occasionally until pasta is Al dente and the sauce is thickened and reduced by half, about 15 minutes.</li>
+        <li>Remove from heat and add the cream cheese. Make sure the heat is off when adding the cream cheese or it will split. The sauce may look runny, but it will thicken once cooled.</li>
     </ol>
 </body>
 
