add pesto and butter chicken recipes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <li><a href="recipes/brocpasta.html">Broccoli Pasta</a></li>
         <li><a href="recipes/cajunpasta.html">Cajun Chicken Pasta</a></li>
         <li><a href="recipes/artichokepiz.html">Artichoke Chicken Pizza</a></li>
+        <li><a href="recipes/pesto.html">Pesto Chicken Pasta</a></li>
+        <li><a href="recipes/butter.html">Butter Chicken</a></li>
     </ul>
     <h3>Easy mains/sides</h3>
     <ul>
