--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -10,7 +10,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Salmon Meal(rice cooker/steamer)</h1>
-    <p>This is a meal you can make completely in the rice cooker/steamer specifically the Aroma one</p>
+    <img src="../images/salmon.JPG" height="500">
     <h2>Ingredients</h2>
     <ul>
         <li>3/4 cup brown rice</li>
