add salmon oven instructions, tuna poke bowl, tuna melt, bbq chicken melt, and baked potato instructions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Recipes</h1>
     <ul>
         <li><a href="recipes/alfredo.html">Linguini Alfredo</a></li>
-        <li><a href="recipes/salmon.html">Salmon Meal(rice cooker/steamer)</a></li>
+        <li><a href="recipes/salmon.html">Salmon</a></li>
         <li><a href="recipes/eggs.html">Ramen Eggs</a></li>
         <li><a href="recipes/ramen.html">Ramen</a></li>
         <li><a href="recipes/spinach.html">Sauteed Spinach</a></li>
@@ -26,6 +26,10 @@
         <li><a href="recipes/artichokepiz.html">Artichoke Chicken Pizza</a></li>
         <li><a href="recipes/pesto.html">Pesto Chicken Pasta</a></li>
         <li><a href="recipes/butter.html">Butter Chicken</a></li>
+        <li><a href="recipes/tunapoke.html">Tuna poke bowl</a></li>
+        <li><a href="recipes/tunamelt.html">Tuna melt</a></li>
+        <li><a href="recipes/bbq.html">BBQ chicken melt</a></li>
+        <li><a href="recipes/potato.html">Baked potatoes</a></li>
     </ul>
     <h3>Easy mains/sides</h3>
     <ul>
