add steak and ziti recipes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <li><a href="recipes/tunamelt.html">Tuna melt</a></li>
         <li><a href="recipes/bbq.html">BBQ chicken melt</a></li>
         <li><a href="recipes/potato.html">Baked potatoes</a></li>
+        <li><a href="recipes/steak.html">Sirloin Steak</a></li>
+        <li><a href="recipes/ziti.html">Baked ziti</a></li>
     </ul>
     <h3>Easy mains/sides</h3>
     <ul>
