add fried rice and parmesan crusted fish recipe

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <li><a href="recipes/potato.html">Baked potatoes</a></li>
         <li><a href="recipes/steak.html">Sirloin Steak</a></li>
         <li><a href="recipes/ziti.html">Baked ziti</a></li>
+        <li><a href="recipes/rice.html">Fried rice</a></li>
+        <li><a href="recipes/fish.html">Parmesan crusted fish</a></li>
     </ul>
     <h3>Easy mains/sides</h3>
     <ul>
