--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <li><a href="recipes/eggs.html">Ramen Eggs</a></li>
         <li><a href="recipes/ramen.html">Ramen</a></li>
         <li><a href="recipes/spinach.html">Sauteed Spinach</a></li>
-        <li><a href="recipes/frittata.html">Frittata</a></li>
         <li><a href="recipes/bagel.html">Pizza Bagels</a></li>
         <li><a href="recipes/burger.html">Thousand Island Burger</a></li>
         <li><a href="recipes/quesadilla.html">Steak Quesadilla</a></li>
@@ -34,6 +33,10 @@
         <li><a href="recipes/ziti.html">Baked ziti</a></li>
         <li><a href="recipes/rice.html">Fried rice</a></li>
         <li><a href="recipes/fish.html">Parmesan crusted fish</a></li>
+        <li><a href="recipes/honeychicken.html">Honey Garlic Chicken</a></li>
+        <li><a href="recipes/poblano.html">Poblano Steak and Cheese Tacos</a></li>
+        <li><a href="recipes/chickentaco.html">Street Corn Chicken Tacos</a></li>
+        <li><a href="recipes/tortsoup.html">Creamy Tortellini and Sausage Soup</a></li>
     </ul>
     <h3>Easy mains/sides</h3>
     <ul>
