add chicken noodle soup, poached eggs, saute shrimp and red potatoes, chicken and ranch wrap, turkey burger and creamy tuscan chicken pasta

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         <li><a href="recipes/poblano.html">Poblano Steak and Cheese Tacos</a></li>
         <li><a href="recipes/chickentaco.html">Street Corn Chicken Tacos</a></li>
         <li><a href="recipes/tortsoup.html">Creamy Tortellini and Sausage Soup</a></li>
+        <li><a href="recipes/poached.html">Poached Egg</a></li>
+        <li><a href="recipes/shrimp_tater.html">Shrimp Saute with Red Potatoes</a></li>
+        <li><a href="recipes/turkey_burg.html">Turkey Burger</a></li>
+        <li><a href="recipes/tuscan_chicken.html">Creamy Tuscan Chicken Pasta</a></li>
+        <li><a href="recipes/snack_wrap.html">Chicken and Ranch Wrap</a></li>
+        <li><a href="recipes/chicken_noodle.html">Chicken Noodle Soup</a></li>
     </ul>
     <h3>Easy mains/sides</h3>
     <ul>
