--- a/index.html
+++ b/index.html
@@ -8,51 +8,177 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <ul>
-        <li><a href="recipes/alfredo.html">Linguini Alfredo</a></li>
-        <li><a href="recipes/salmon.html">Salmon</a></li>
-        <li><a href="recipes/eggs.html">Ramen Eggs</a></li>
-        <li><a href="recipes/ramen.html">Ramen</a></li>
-        <li><a href="recipes/spinach.html">Sauteed Spinach</a></li>
-        <li><a href="recipes/bagel.html">Pizza Bagels</a></li>
-        <li><a href="recipes/burger.html">Thousand Island Burger</a></li>
-        <li><a href="recipes/quesadilla.html">Steak Quesadilla</a></li>
-        <li><a href="recipes/shrimp.html">Shrimp Scampi Spaghetti</a></li>
-        <li><a href="recipes/pork.html">Breaded Pork Chops</a></li>
-        <li><a href="recipes/mongbeef.html">Mongolian Beef</a></li>
-        <li><a href="recipes/brocpasta.html">Broccoli Pasta</a></li>
-        <li><a href="recipes/cajunpasta.html">Cajun Chicken Pasta</a></li>
-        <li><a href="recipes/artichokepiz.html">Artichoke Chicken Pizza</a></li>
-        <li><a href="recipes/pesto.html">Pesto Chicken Pasta</a></li>
-        <li><a href="recipes/butter.html">Butter Chicken</a></li>
-        <li><a href="recipes/tunapoke.html">Tuna poke bowl</a></li>
-        <li><a href="recipes/tunamelt.html">Tuna melt</a></li>
-        <li><a href="recipes/bbq.html">BBQ chicken melt</a></li>
-        <li><a href="recipes/potato.html">Baked potatoes</a></li>
-        <li><a href="recipes/steak.html">Sirloin Steak</a></li>
-        <li><a href="recipes/ziti.html">Baked ziti</a></li>
-        <li><a href="recipes/rice.html">Fried rice</a></li>
-        <li><a href="recipes/fish.html">Parmesan crusted fish</a></li>
-        <li><a href="recipes/honeychicken.html">Honey Garlic Chicken</a></li>
-        <li><a href="recipes/poblano.html">Poblano Steak and Cheese Tacos</a></li>
-        <li><a href="recipes/chickentaco.html">Street Corn Chicken Tacos</a></li>
-        <li><a href="recipes/tortsoup.html">Creamy Tortellini and Sausage Soup</a></li>
-        <li><a href="recipes/poached.html">Poached Egg</a></li>
-        <li><a href="recipes/shrimp_tater.html">Shrimp Saute with Red Potatoes</a></li>
-        <li><a href="recipes/turkey_burg.html">Turkey Burger</a></li>
-        <li><a href="recipes/tuscan_chicken.html">Creamy Tuscan Chicken Pasta</a></li>
-        <li><a href="recipes/snack_wrap.html">Chicken and Ranch Wrap</a></li>
-        <li><a href="recipes/chicken_noodle.html">Chicken Noodle Soup</a></li>
-    </ul>
-    <h3>Easy mains/sides</h3>
-    <ul>
-        <li>Salad kits</li>
-        <li>Rotisserie chicken</li>
-        <li>Precooked presliced ham</li>
-        <li>Hotdogs</li>
-        <li>Instant mashed potatoes</li>
-        <li>Frozen: vegetables, sides, meats</li>
-        <li>Pasta with sauce from a jar</li>
-    </ul>
+    <recipes>
+        <recipe>
+            <link>recipes/alfredo.html</link>
+            <name>Linguini Alfredo</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/salmon.html</link>
+            <name>Salmon</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/eggs.html</link>
+            <name>Ramen Eggs</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/ramen.html</link>
+            <name>Ramen</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/spinach.html</link>
+            <name>Sauteed Spinach</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/bagel.html</link>
+            <name>Pizza Bagels</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/burger.html</link>
+            <name>Thousand Island Burger</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/quesadilla.html</link>
+            <name>Steak Quesadilla</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/shrimp.html</link>
+            <name>Shrimp Scampi Spaghetti</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/pork.html</link>
+            <name>Breaded Pork Chops</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/mongbeef.html</link>
+            <name>Mongolian Beef</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/brocpasta.html</link>
+            <name>Broccoli Pasta</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/cajunpasta.html</link>
+            <name>Cajun Chicken Pasta</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/artichokepiz.html</link>
+            <name>Artichoke Chicken Pizza</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/pesto.html</link>
+            <name>Pesto Chicken Pasta</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/butter.html</link>
+            <name>Butter Chicken</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/tunapoke.html</link>
+            <name>Tuna poke bowl</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/tunamelt.html</link>
+            <name>Tuna melt</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/bbq.html</link>
+            <name>BBQ chicken melt</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/potato.html</link>
+            <name>Baked potatoes</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/steak.html</link>
+            <name>Sirloin Steak</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/ziti.html</link>
+            <name>Baked ziti</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/rice.html</link>
+            <name>Fried rice</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/fish.html</link>
+            <name>Parmesan crusted fish</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/honeychicken.html</link>
+            <name>Honey Garlic Chicken</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/poblano.html</link>
+            <name>Poblano Steak and Cheese Tacos</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/chickentaco.html</link>
+            <name>Street Corn Chicken Tacos</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/tortsoup.html</link>
+            <name>Creamy Tortellini and Sausage Soup</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/poached.html</link>
+            <name>Poached Egg</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/shrimp_tater.html</link>
+            <name>Shrimp Saute with Red Potatoes</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/turkey_burg.html</link>
+            <name>Turkey Burger</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/tuscan_chicken.html</link>
+            <name>Creamy Tuscan Chicken Pasta</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/snack_wrap.html</link>
+            <name>Chicken and Ranch Wrap</name>
+            <image></image>
+        </recipe>
+        <recipe>
+            <link>recipes/chicken_noodle.html</link>
+            <name>Chicken Noodle Soup</name>
+            <image></image>
+        </recipe>
+    </recipes>
 </body>
 </html>
