transition from using html to xml and make the images show up in alpahbetical order with images and with a search feature

--- a/index.html
+++ b/index.html
@@ -1,184 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Recipes</title>
+    <title>Recipe Collection</title>
+    <meta http-equiv="refresh" content="0; url=recipes.xml">
+    <link rel="canonical" href="recipes.xml">
 </head>
 <body>
-    <h1>Recipes</h1>
-    <recipes>
-        <recipe>
-            <link>recipes/alfredo.html</link>
-            <name>Linguini Alfredo</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/salmon.html</link>
-            <name>Salmon</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/eggs.html</link>
-            <name>Ramen Eggs</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/ramen.html</link>
-            <name>Ramen</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/spinach.html</link>
-            <name>Sauteed Spinach</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/bagel.html</link>
-            <name>Pizza Bagels</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/burger.html</link>
-            <name>Thousand Island Burger</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/quesadilla.html</link>
-            <name>Steak Quesadilla</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/shrimp.html</link>
-            <name>Shrimp Scampi Spaghetti</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/pork.html</link>
-            <name>Breaded Pork Chops</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/mongbeef.html</link>
-            <name>Mongolian Beef</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/brocpasta.html</link>
-            <name>Broccoli Pasta</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/cajunpasta.html</link>
-            <name>Cajun Chicken Pasta</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/artichokepiz.html</link>
-            <name>Artichoke Chicken Pizza</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/pesto.html</link>
-            <name>Pesto Chicken Pasta</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/butter.html</link>
-            <name>Butter Chicken</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/tunapoke.html</link>
-            <name>Tuna poke bowl</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/tunamelt.html</link>
-            <name>Tuna melt</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/bbq.html</link>
-            <name>BBQ chicken melt</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/potato.html</link>
-            <name>Baked potatoes</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/steak.html</link>
-            <name>Sirloin Steak</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/ziti.html</link>
-            <name>Baked ziti</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/rice.html</link>
-            <name>Fried rice</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/fish.html</link>
-            <name>Parmesan crusted fish</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/honeychicken.html</link>
-            <name>Honey Garlic Chicken</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/poblano.html</link>
-            <name>Poblano Steak and Cheese Tacos</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/chickentaco.html</link>
-            <name>Street Corn Chicken Tacos</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/tortsoup.html</link>
-            <name>Creamy Tortellini and Sausage Soup</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/poached.html</link>
-            <name>Poached Egg</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/shrimp_tater.html</link>
-            <name>Shrimp Saute with Red Potatoes</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/turkey_burg.html</link>
-            <name>Turkey Burger</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/tuscan_chicken.html</link>
-            <name>Creamy Tuscan Chicken Pasta</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/snack_wrap.html</link>
-            <name>Chicken and Ranch Wrap</name>
-            <image></image>
-        </recipe>
-        <recipe>
-            <link>recipes/chicken_noodle.html</link>
-            <name>Chicken Noodle Soup</name>
-            <image></image>
-        </recipe>
-    </recipes>
+    <p>This page is redirecting you to the <a href="recipes.xml">Recipe Collection</a>...</p>
 </body>
 </html>
