--- a/recipes/brocpasta.html
+++ b/recipes/brocpasta.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Broccoli Pasta</h1>
     <img src="../images/brocpasta.jpg" height="500">
     <p>Makes 4 servings</p>
