--- a/recipes/fish.html
+++ b/recipes/fish.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Parmesan crusted fish</h1>
     <img src="../images/fish.jpg" height="500">
     <h2>Ingredients</h2>
