--- a/recipes/tortsoup.html
+++ b/recipes/tortsoup.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Creamy Tortellini and Sausage Soup</h1>
     <img src="../images/tortsoup.jpg" height="500">
     <h2>Ingredients</h2>
