--- a/recipes/tunapoke.html
+++ b/recipes/tunapoke.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Tuna poke bowl</h1>
     <img src="../images/poke.jpg" height="500">
     <h2>Ingredients</h2>
