--- a/recipes/artichokepiz.html
+++ b/recipes/artichokepiz.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Artichoke Chicken Pizza</h1>
     <img src="../images/artichokepiz.jpg" height="500">
     <p>Makes 4 servings</p>
