--- a/recipes/bagel.html
+++ b/recipes/bagel.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Pizza Bagels</h1>
     <img src="../images/pizbagel.jpg" height="500">
     <h2>Ingredients</h2>
