--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Thousand Island Burger</h1>
     <img src="../images/burger.jpg" height="500">
     <h2>Ingredients</h2>
