--- a/recipes/cajunpasta.html
+++ b/recipes/cajunpasta.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Cajun Chicken Pasta</h1>
     <p>Makes 4 servings</p>
     <h2>Ingredients</h2>
