--- a/recipes/chicken_noodle.html
+++ b/recipes/chicken_noodle.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Chicken Noodle Soup</h1>
     <img src="../images/chicken_noodle.jpg" height="500">
     <h2>Ingredients</h2>
