--- a/recipes/honeychicken.html
+++ b/recipes/honeychicken.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Honey Garlic Chicken</h1>
     <img src="../images/honeychicken.jpg" height="500">
     <h2>Ingredients</h2>
