--- a/recipes/mongbeef.html
+++ b/recipes/mongbeef.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Mongolian Beef</h1>
     <img src="../images/mongbeef.jpg" height="500">
     <p>Makes 3-4 servings</p>
