--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Pesto Chicken Pasta</h1>
     <img src="../images/pesto.jpg" height="500">
     <h2>Ingredients</h2>
