--- a/recipes/poached.html
+++ b/recipes/poached.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Poached Egg</h1>
     <img src="../images/poached.JPG" height="500">
     <h2>Ingredients</h2>
