--- a/recipes/poblano.html
+++ b/recipes/poblano.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Poblano Steak and Cheese Tacos</h1>
     <img src="../images/poblano.jpg" height="500">
     <h2>Ingredients</h2>
