--- a/recipes/pork.html
+++ b/recipes/pork.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Breaded Pork Chops</h1>
     <img src="../images/pork.jpg" height="500">
     <h2>Ingredients</h2>
