--- a/recipes/potato.html
+++ b/recipes/potato.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Baked potatoes</h1>
     <h2>Ingredients</h2>
     <ul>
