--- a/recipes/quesadilla.html
+++ b/recipes/quesadilla.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Steak Quesadilla</h1>
     <img src="../images/quesadilla.jpg" height="500">
     <h2>Ingredients</h2>
