--- a/recipes/rice.html
+++ b/recipes/rice.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Fried Rice</h1>
     <img src="../images/rice.jpg" height="500">
     <h2>Ingredients</h2>
