--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Salmon</h1>
     <img src="../images/salmon.JPG" height="500">
     <h3>Use the link below for instructions for rice and steaming salmon or vegetables</h3>
