--- a/recipes/shrimp_tater.html
+++ b/recipes/shrimp_tater.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Shrimp Saute with Red Potatoes</h1>
     <img src="../images/shrimp_tater.jpg" height="500">
     <h2>Ingredients</h2>
