--- a/recipes/snack_wrap.html
+++ b/recipes/snack_wrap.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Chicken and Ranch Wrap</h1>
     <img src="../images/snack_wrap.jpg" height="500">
     <h2>Ingredients</h2>
