--- a/recipes/spinach.html
+++ b/recipes/spinach.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Sauteed Spinach</h1>
     <img src="../images/spinach.JPG" height="500">
     <h2>Ingredients</h2>
