--- a/recipes/turkey_burg.html
+++ b/recipes/turkey_burg.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Turkey Burger</h1>
     <img src="../images/turkey_burg.jpg" height="500">
     <h2>Ingredients</h2>
