--- a/recipes/ziti.html
+++ b/recipes/ziti.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../recipes.xml">Home</a>
     <h1>Baked Ziti</h1>
     <img src="../images/ziti.jpg" height="500">
     <h2>Ingredients</h2>
