shrink image size

--- a/recipes/poached.html
+++ b/recipes/poached.html
@@ -10,7 +10,7 @@
 <body>
     <a href="../recipes.xml">Home</a>
     <h1>Poached Egg</h1>
-    <img src="../images/poached.JPG" height="500">
+    <img src="../images/poached.jpg" height="500">
     <h2>Ingredients</h2>
     <ul>
         <li>White Vinegar</li>
