--- a/recipes/nut_chicken_salad.html
+++ b/recipes/nut_chicken_salad.html
@@ -17,20 +17,20 @@
         <li>3 cups cooked chicken (1-1.5 lbs)</li>
         <li>1/2 cup walnuts and pecans</li>
         <li>1/2 red pepper</li>
-        <li>2 tablespoons fresh dill</li>
-        <li>1 tablespoons chives</li>
+        <li>2 tablespoons dill</li>
+        <li>Half bunch of green onions</li>
         <li>1/2 cup mayo</li>
         <li>2 tablespoons plain greek yogurt</li>
         <li>1 tablespoons dijon mustard</li>
         <li>1 teaspoons fresh lemon juice</li>
         <li>Salt and black pepper to taste</li>
-        <li>Cucumber slices and shredded carrots mixed in</li>
+        <li>Cucumber slices and shredded carrots mixed in or for dipping</li>
         <li>Bed of mixed greens</li>
     </ul>
     <h2>Steps</h2>
     <ol>
         <li>Spread the walnuts and pecans on a dry pan or baking sheet. Toast at 350 degrees in an oven for 5-8 minutes until fragrant. Let them cool completely then chop them</li>
-        <li>In a large mixing bowl combine the shredded/diced chicken, the chopped nuts, chopped red bell pepper, fresh dill, and chives</li>
+        <li>In a large mixing bowl combine the shredded/diced chicken, the chopped nuts, chopped red bell pepper, dill, and green onions</li>
         <li>In a seperate small bowl whisk together the mayo, greek yogurt, dijon mustard, and fresh lemon juice for the dressing</li>
         <li>Season the dressing generously with salt and black pepper. Stir well until the dressing is smooth and evenly mixed</li>
         <li>Pour the prepared dressing over the chicken and vegetable mixture in the large bowl. Stir until evenly coated</li>
