add lychee jello shots, spicy chicken pasta, salt dough ornaments, southwest salmon bowl, and sugar cookies

--- a/recipes/quinoa_chicken_potato_bowl.html
+++ b/recipes/quinoa_chicken_potato_bowl.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quinoa Chicken Red Potato Bowl</title>
+    <title>Chicken Red Potato Quinoa Bowl</title>
 </head>
 
 <body>
     <a href="../recipes.xml">Home</a>
-    <h1>Quinoa Chicken Red Potato Bowl</h1>
+    <h1>Chicken Red Potato Quinoa Bowl</h1>
     <img src="../images/quinoa_chicken_potato_bowl.jpg" height="500">
     <h2>Ingredients</h2>
     <ul>
