add pictures for onigiri, beef stroganoff, and garlic chicken and creamy potatoes. Add recipes for scalloped potatoes and beef stroganoff

--- a/recipes/pot_roast.html
+++ b/recipes/pot_roast.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pot Roast</title>
+    <title>Crockpot Pot Roast</title>
 </head>
 
 <body>
     <a href="../recipes.xml">Home</a>
-    <h1>Pot Roast</h1>
+    <h1>Crockpot Pot Roast</h1>
     <img src="../images/pot_roast.jpg" height="500">
     <p>6 servings</p>
     <h2>Ingredients</h2>
